@@ -1,5 +1,6 @@
 2010-10-06  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
+	* Fixed issue #9208: autocomplete does not work when choosing term using the mouse
 	* Fixed the path to ui-anim_basic_16x16.gif
 
 2010-10-04  Ingo Renner  <ingo.renner@dkd.de>
